--- a/public/report-bugs.html
+++ b/public/report-bugs.html
@@ -10,7 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" type="text/css" href="/../css/style.css" />
-    <link rel="stylesheet" type="text/css" href="/../css/report-bugs.css" />
+    <link rel="stylesheet" type="text/css" href="/../css/form.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Oswald:400,300,700|EB+Garamond"
       rel="stylesheet"
