--- a/public/room-preview.html
+++ b/public/room-preview.html
@@ -15,6 +15,8 @@
       href="https://fonts.googleapis.com/css?family=Oswald:400,300,700|EB+Garamond"
       rel="stylesheet"
     />
+
+    <script src="/../javascripts/new-room/room-preview.js"></script>
     <title>Eugene.io Room</title>
   </head>
   <body>
@@ -28,10 +30,13 @@
         <div id="cam-1">
           <h3 class="playername" id="playername1"></h3>
           <h3 class="timer" id="timer1"></h3>
-          <div class="video-overlay" player="1" onclick="vote(this)">
-            <h3 class="overlay-text" player="1">Click to Vote</h3
-            ><video id="cam-1-embed" autoplay></video
-          ></div>
+          <div class="video-padding">
+            <div class="video-overlay" player="1" onclick="vote(this)">
+              <h3 class="overlay-text" player="1">Click to Vote</h3
+              ><video id="cam-1-embed" autoplay></video
+            ></div>
+          </div>
+
           <div
             ><button class="btn" onclick="voteKick(this,1)" id="votekick-button1"
               >Vote to Kick</button
@@ -41,17 +46,19 @@
         <div id="cam-2">
           <h3 class="playername" id="playername2"></h3>
           <h3 class="timer" id="timer2"></h3>
-          <div class="video-overlay" player="2" onclick="vote(this)">
-            <h3 class="overlay-text" player="2">Click to Vote</h3
-            ><video id="cam-2-embed" autoplay></video
-          ></div>
+          <div class="video-padding">
+            <div class="video-overlay" player="2" onclick="vote(this)">
+              <h3 class="overlay-text" player="2">Click to Vote</h3
+              ><video id="cam-2-embed" autoplay></video
+            ></div>
+          </div>
+
           <div
             ><button class="btn" onclick="voteKick(this,2)" id="votekick-button2"
               >Vote to Kick</button
             ><button class="btn" onclick="report(2)">Report</button> <p id="votekick-text2"></p
           ></div>
-        </div>
-        <script src="/../javascripts/c-namespace/read-camera-stream.js"></script> </div
+        </div> </div
     ></div>
 
     <div id="container">
@@ -59,7 +66,6 @@
         <h2 id="player-stats">0 Current Viewers 0 in Queue</h2>
         <h2 id="player-notif">Waiting for Players to Start...</h2>
         <div id="message-form">
-          <script src="/../javascripts/c-namespace/chat.js"></script>
           <ul id="messages"></ul>
           <input
             id="message-box"
@@ -75,10 +81,5 @@
         ></div
       >
     </div>
-    <script>
-      setTimeout(() => {
-        getName();
-      }, 100);
-    </script>
   </body>
 </html>
