Updated home page

--- a/public/home.html
+++ b/public/home.html
@@ -48,11 +48,11 @@
         <div id="news">
         <h1>News</h1>
         <p>Hey!</p>
-        <p>We added some new features to the site! Here is a list of some of the features!</p>
+        <p>Welcome to the early-release version. This version is mainly for testing, and probably won't be capable of handling any significant amount of traffic.</p>
         <ul>
-          <li>One</li>
-          <li>Two</li>
-          <li>Three</li>
+          <li>Feel free to test out the games and give some feedback</li>
+          <li>Please report any bugs you find, or suggest any features you think would improve the project.</li>
+          <li>If you would like to help us out, please consider dropping a small donation. </li>
         </ul>
       </div>
     </div>
@@ -65,9 +65,9 @@
     <div>
     <p>Compete against a random stranger in front of other random strangers, king of the hill style! At the end of each round, the audience votes for who won, and the loser gets kicked out. If it's a tie, then a rematch automatically begins.</p>
   <p>The competition can be about... anything! Join any room you like, and enter the queue to  go live in front of the audeince, and fight to stay up. Once you get kicked off, you can always join the queue again and get another turn. Or, if you're a bit shy, feel free to just watch along and vote for the winner in each round. </p></div>
-    <div id = "footerwrap"><div id ="footer-message"><p>The owner of this site is not responsible for any user generated content (video feed, messages & usernames)</p></div>
+    <div id = "footerwrap"><div id ="footer-message"><p>The owner of this site is not responsible for any user generated content (video feed, messages & usernames)</p><p>Contribute to the project</p></div>
     <div id = "footer-links"><p>Contact</p>
-    <p>Open Source</p>
+    <a href="https://github.com/ajk745/Livebattl.io-WIP"><p>Open Source</p></a>
     <a href="./tos"><p>Terms of Service</p></a>
   <a href="./bugs"><p>Report Bugs/Suggestions</p></a></div></div>
   </body>
