--- a/public/not-found.html
+++ b/public/not-found.html
@@ -3,9 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="/../css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/../css/about.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Oswald:400,300,700|EB+Garamond"
+      rel="stylesheet"
+    />
+    <title>Eugene.io 404</title>
   </head>
   <body>
-    Page not Found
+    <div id="headerwrap"
+      ><header>
+        <h1 id="title">404 Error</h1>
+        <h4 id="description">No Server Response</h4></header
+      >
+      <div id="tab-container"
+        ><div id="tab">
+          <button class="tablink" onclick="document.location.href = '../'">Home</button>
+          <button class="tablink" onclick="document.location.href = '../rooms'">Rooms</button>
+          <button class="tablink" id="selected">About</button>
+        </div></div
+      >
+    </div>
+    <p>Looks like this link leads to a page that doesn't exist. Unlucky...</p>
+
+    <p>Or... there's something wrong on our end.</p>
+
+    <p>Either way, please check the link against, or <a href="/">return to the home page.</a> </p>
   </body>
 </html>
