--- a/public/about.html
+++ b/public/about.html
@@ -35,42 +35,51 @@
       >Compete against a random stranger in front of other random strangers, king of the hill style!
       At the end of each round, the audience votes for who won, and the loser gets kicked out. If
       it's a tie, then a rematch automatically begins.</p
-    >
-    <p style="width: 55%; float: left;"
-      >The competition can be about... anything! Join any room you like, and enter the queue to go
-      live in front of the audeince, and fight to stay up. Once you get kicked off, you can always
-      join the queue again and get another turn. Or, if you're a bit shy, feel free to just watch
-      along and vote for the winner in each round. Rooms have a maximum number of people that can be
-      in a queue at once, so if the queue is full, try to fill the slot at the end of each round as
-      fast as possible.
-    </p>
-    <p style="width: 55%; float: left;">
-      Some rooms will have different rules to suit their playstyle. In some rooms, players will take
-      turns at the mic, and only one person is allowed to speak at a time. In others, both players
-      have access to the mic at the same time.
-    </p>
-    <div style="margin-left: 60%;"
-      ><img src="../images/stream-prev.png" style="max-width: 100%;"
-    /></div>
+    ><div class="section"
+      ><p style="width: 55%; float: left"
+        >The competition can be about... anything! Join any room you like, and enter the queue to go
+        live in front of the audeince, and fight to stay up. Once you get kicked off, you can always
+        join the queue again and get another turn. Or, if you're a bit shy, feel free to just watch
+        along and vote for the winner in each round. Rooms have a maximum number of people that can
+        be in a queue at once, so if the queue is full, try to fill the slot at the end of each
+        round as fast as possible.
+      </p>
+      <p style="width: 55%; float: left">
+        Some rooms will have different rules to suit their playstyle. In some rooms, players will
+        take turns at the mic, and only one person is allowed to speak at a time. In others, both
+        players have access to the mic at the same time.
+      </p>
+      <div style="margin-left: 60%"
+        ><img src="../images/stream-prev.png" style="max-width: 100%" /></div
+    ></div>
 
-    <div style="width: 10%; float: left; margin-left: 2em;"
-      ><img src="../images/queue-prev.png" style="max-width: 100%;"
-    /></div>
+    <div class="section"
+      ><div style="width: 10%; float: left; margin-left: 2em"
+        ><img src="../images/queue-prev.png" style="max-width: 100%"
+      /></div>
+      <p
+        >Search through rooms and find one that interests you; or, create your own! Each room has a
+        custom set of rules and styling to suit it's theme.
+      </p>
+      <p>
+        This project is still in extremely early development. We will be adding features and ironing
+        out bugs and issues as development continues. Make sure to report any issues or suggest
+        features to us to improve this project. This project is open source, and you can always
+        access the most recent code. If you would like to help maintain and improve the site, please
+        consider a <a href="">donation</a>.</p
+      >
+      <p
+        >Our servers run on a node.js platform and use socket.io to handle streaming and player
+        interactions. Feel free to leave any pull requests at the source code to help us improve the
+        project. We will always keep you updated on the latest updates in the news section on the
+        front page.
+      </p>
+    </div>
+
     <p
-      >Search through rooms and find one that interests you; or, create your own! Each room has a
-      custom set of rules and styling to suit it's theme.
-    </p>
-    <p>
-      This project is still in extremely early development. We will be adding features and ironing
-      out bugs and issues as development continues. Make sure to report any issues or suggest
-      features to us to improve this project. This project is open source, and you can always access
-      the most recent code</p
-    >
-    <p
-      >Our servers run on a node.js platform and use socket.io to handle streaming and player
-      interactions. Feel free to leave any pull requests at the source code to help us improve the
-      project. We will always keep you updated on the latest updates in the news section on the
-      front page, as well as in commit messages.
+      >Our service allows users to participate fully anonymously, without needing to even create an
+      account. Please don't try to abuse this system. We do have hidden moderators that watch for
+      disrupive content, and we have the power to ban users from the site.
     </p>
   </body>
 </html>
