--- a/public/about.html
+++ b/public/about.html
@@ -66,7 +66,7 @@
         out bugs and issues as development continues. Make sure to report any issues or suggest
         features to us to improve this project. This project is open source, and you can always
         access the most recent code. If you would like to help maintain and improve the site, please
-        consider a <a href="">donation</a>.</p
+        consider a <a href="./sponsor">donation</a>.</p
       >
       <p
         >Our servers run on a node.js platform and use socket.io to handle streaming and player
