--- a/public/report-bugs.html
+++ b/public/report-bugs.html
@@ -38,7 +38,7 @@
       >In this form, you can report bugs or suggest features for the project. Alternatively, you can
       visit the <a href="https://github.com/ajk745/Livebattl.io-WIP"> Github repository</a> and
       submit a bug report or feature suggestion there. If you'd like to further help out the
-      project, please consider <a href="">giving a small donation.</a>
+      project, please consider <a href="./sponsor.html">giving a small donation.</a>
     </p>
     <p
       >If you have technical experience, feel free to leave pull requests on the repository with
