--- a/public/sponsor.html
+++ b/public/sponsor.html
@@ -14,13 +14,13 @@
       href="https://fonts.googleapis.com/css?family=Oswald:400,300,700|EB+Garamond"
       rel="stylesheet"
     />
-    <title>Eugene.io 404</title>
+    <title>Eugene.io Donate</title>
   </head>
   <body>
     <div id="headerwrap"
       ><header>
-        <h1 id="title">404 Error</h1>
-        <h4 id="description">No Server Response</h4></header
+        <h1 id="title">Sponsor the Project</h1>
+        <h4 id="description">We appreciate any contribution</h4></header
       >
       <div id="tab-container"
         ><div id="tab">
@@ -30,10 +30,20 @@
         </div></div
       >
     </div>
-    <p>Looks like this link leads to a page that doesn't exist. Unlucky...</p>
-
-    <p>Or... there's something wrong on our end.</p>
-
-    <p>Either way, please check the link against, or <a href="/">return to the home page.</a> </p>
+    <p
+      >Thank you for considering a donation to help the project. All contributions will go towards
+      services to maintain and improve site capacity, and towards fixing bugs and adding new
+      features.</p
+    >
+    <h2>Sponsor with Liberapay</h2>
+    <div style="margin-left: 2rem"
+      ><script src="https://liberapay.com/LiveBattl/widgets/button.js"></script>
+      <noscript
+        ><a href="https://liberapay.com/LiveBattl/donate"
+          ><img
+            alt="Donate using Liberapay"
+            src="https://liberapay.com/assets/widgets/donate.svg" /></a></noscript
+    ></div>
+    <h2>More donation methods coming soon...</h2>
   </body>
 </html>
