--- a/public/home.html
+++ b/public/home.html
@@ -17,12 +17,12 @@
     />
     <script src="../javascripts/home/get-elements.js"></script>
     <script src="../javascripts/home/get-featured-room.js"></script>
-    <title>Eugene.io</title>
+    <title>Battl.live</title>
   </head>
   <body>
     <div id="headerwrap"
       ><header>
-        <h1 id="title">Eugene.io</h1>
+        <h1 id="title">Battl.live</h1>
         <h4 id="description">Alpha v0.0.1 (Test Build)</h4></header
       >
       <div id="tab-container"
