--- a/public/new-room.html
+++ b/public/new-room.html
@@ -18,7 +18,7 @@
     <script src="../javascripts/new-room/check-background-upload.js"></script>
     <script src="../javascripts/new-room/reload-preview.js"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <title>Eugene.io Create New Room</title>
+    <title>Battl.live Create New Room</title>
   </head>
   <body>
     <div id="headerwrap"
@@ -87,7 +87,7 @@
         name="timeLimit"
         min="30"
         max="300"
-        style="width: 5%; margin-right: 1em;"
+        style="width: 5%; margin-right: 1em"
       />
       Seconds
       <br />
@@ -106,7 +106,7 @@
       <input type="file" accept="image/png, image/jpeg" name="background" id="background" />
       <div
         class="g-recaptcha"
-        data-sitekey="6Ld9tr8ZAAAAAHjnIwz7x4DNeolxpKHXx4EweOM5"
+        data-sitekey="6LckisUZAAAAAEIOgQ6By64pa-FBq2xdSxq5rd1q"
         data-callback="captchaVerify"
       ></div>
       <br />
