--- a/public/not-found.html
+++ b/public/not-found.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css?family=Oswald:400,300,700|EB+Garamond"
       rel="stylesheet"
     />
-    <title>Eugene.io 404</title>
+    <title>Battl.live 404</title>
   </head>
   <body>
     <div id="headerwrap"
