--- a/public/report-bugs.html
+++ b/public/report-bugs.html
@@ -18,7 +18,7 @@
     <script src="../javascripts/home/get-elements.js"></script>
     <script src="../javascripts/home/get-featured-room.js"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <title>Eugene.io Bugs & Suggestions</title>
+    <title>Battl.live Bugs & Suggestions</title>
   </head>
   <body>
     <div id="headerwrap"
@@ -74,7 +74,7 @@
       </script>
       <div
         class="g-recaptcha"
-        data-sitekey="6Ld9tr8ZAAAAAHjnIwz7x4DNeolxpKHXx4EweOM5"
+        data-sitekey="6LckisUZAAAAAEIOgQ6By64pa-FBq2xdSxq5rd1q"
         data-callback="captchaVerify"
       ></div>
       <br />
