--- a/public/report-fail.html
+++ b/public/report-fail.html
@@ -17,7 +17,7 @@
     />
     <script src="../javascripts/home/get-elements.js"></script>
     <script src="../javascripts/home/get-featured-room.js"></script>
-    <title>Eugene.io Bugs & Suggestions</title>
+    <title>Battl.live Bugs & Suggestions</title>
   </head>
   <body>
     <div id="headerwrap"
