--- a/public/rooms.html
+++ b/public/rooms.html
@@ -17,7 +17,7 @@
     />
     <script src="../javascripts/rooms/get-elements.js"></script>
     <script src="../javascripts/rooms/get-rooms.js"></script>
-    <title>Eugene.io Rooms</title>
+    <title>Battl.live Rooms</title>
   </head>
   <body>
     <div id="headerwrap"
