--- a/public/about.html
+++ b/public/about.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css?family=Oswald:400,300,700|EB+Garamond"
       rel="stylesheet"
     />
-    <title>Eugene.io About</title>
+    <title>Battl.live About</title>
   </head>
   <body>
     <div id="headerwrap"
