--- a/public/new-room-success.html
+++ b/public/new-room-success.html
@@ -17,7 +17,7 @@
     />
     <script src="../javascripts/new-room/check-background-upload.js"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <title>Eugene.io Create New Room</title>
+    <title>Battl.live Create New Room</title>
   </head>
   <body>
     <div id="headerwrap"
