--- a/public/room-preview.html
+++ b/public/room-preview.html
@@ -17,7 +17,7 @@
     />
 
     <script src="/../javascripts/new-room/room-preview.js"></script>
-    <title>Eugene.io Room</title>
+    <title>Battl.live Room</title>
   </head>
   <body>
     <div id="headerwrap">
