--- a/public/terms.html
+++ b/public/terms.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css?family=Oswald:400,300,700|EB+Garamond"
       rel="stylesheet"
     />
-    <title>Eugene.io Terms</title>
+    <title>Battl.live Terms</title>
   </head>
   <body>
     <p></p>
