--- a/public/sponsor.html
+++ b/public/sponsor.html
@@ -14,6 +14,11 @@
       href="https://fonts.googleapis.com/css?family=Oswald:400,300,700|EB+Garamond"
       rel="stylesheet"
     />
+    <script
+      data-ad-client="ca-pub-5525889174624554"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
     <title>Battl.live Donate</title>
   </head>
   <body>
