--- a/public/c-namespace.html
+++ b/public/c-namespace.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="/../css/style.css"/>
     <link rel="stylesheet" type="text/css" href="/../css/c-namespace.css" />
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700|EB+Garamond" rel="stylesheet">
+    <script data-ad-client="ca-pub-5525889174624554" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>Battl.live Room</title>
   </head>
   <body>
