--- a/public/new-room-success.html
+++ b/public/new-room-success.html
@@ -17,6 +17,11 @@
     />
     <script src="../javascripts/new-room/check-background-upload.js"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script
+      data-ad-client="ca-pub-5525889174624554"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
     <title>Battl.live Create New Room</title>
   </head>
   <body>
