--- a/public/c-namespace.html
+++ b/public/c-namespace.html
@@ -10,7 +10,17 @@
       document.title = `Battl.live: /c${namespace}`
       console.log("Connecting to socket namespace " + namespace)
       var socket = io(namespace || '/');
-      socket.on('room-not-found', ()=> window.location = '../roomerror')
+      socket.on('room-not-found', ()=> window.location = '../roomerror');
+      var connectionAllowed = true;
+      socket.on('duplicate-ip', () => {
+        connectionAllowed = false;
+        console.log('This client is a duplicate of one already in the room.');
+        alert(
+          'A client on your computer is already in this room. Do NOT join a room on multiple windows or clients. You have been disconnected...'
+        );
+        window.location = '../rooms';
+        
+      });
     </script>
     <script src="/../javascripts/c-namespace/fatal-error.js"></script>
     <script src="/../javascripts/c-namespace/get-elements.js"></script>
@@ -36,6 +46,7 @@
       <div id="cam-1">
         <h3 class="playername" id="playername1"></h3>
         <h3 class="timer" id="timer1"></h3>
+        <p id = "winstreak1" class="winstreak">Streak: 0</p>
         <div class="video-padding">
 <div class="video-overlay" player="1" onclick = "vote(this)">
           <h3 class="overlay-text" player="1">Click to Vote</h3><video id="cam-1-embed" autoplay></video
@@ -47,6 +58,7 @@
       <div id="cam-2">
         <h3 class="playername" id="playername2"></h3>
         <h3 class="timer" id="timer2"></h3>
+        <p id = "winstreak2" class="winstreak">Streak: 0</p>
         <div class="video-padding">
 <div class="video-overlay" player = "2" onclick = "vote(this)">
           <h3 class="overlay-text" player = "2">Click to Vote</h3><video id="cam-2-embed" autoplay></video
