--- a/public/home.html
+++ b/public/home.html
@@ -67,7 +67,7 @@
     <p>Compete against a random stranger in front of other random strangers, king of the hill style! At the end of each round, the audience votes for who won, and the loser gets kicked out. If it's a tie, then a rematch automatically begins.</p>
   <p>The competition can be about... anything! Join any room you like, and enter the queue to  go live in front of the audeince, and fight to stay up. Once you get kicked off, you can always join the queue again and get another turn. Or, if you're a bit shy, feel free to just watch along and vote for the winner in each round. </p></div>
     <div id = "footerwrap"><div id ="footer-message"><p>The owner of this site is not responsible for any user generated content (video feed, messages & usernames)</p><a href="./sponsor"><p>Contribute to the project</p></a></div>
-    <div id = "footer-links"><p>Contact</p>
+    <div id = "footer-links"><a href="mailto: help.battl.live@gmail.com"><p>Contact</p></a>
     <a href="https://github.com/ajk745/Livebattl.io-WIP"><p>Open Source</p></a>
     <a href="./tos"><p>Terms of Service</p></a>
   <a href="./bugs"><p>Report Bugs/Suggestions</p></a></div></div>
