Minor tweaks to pages

--- a/public/sponsor.html
+++ b/public/sponsor.html
@@ -40,6 +40,14 @@
       services to maintain and improve site capacity, and towards fixing bugs and adding new
       features.</p
     >
+    <h2>Sponsor with Patreon</h2>
+    <div style="margin-left: 2rem">
+      <a
+        href="https://www.patreon.com/bePatron?u=43423821"
+        data-patreon-widget-type="become-patron-button"
+        >Become a Patron!</a
+      ><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
+    </div>
     <h2>Sponsor with Liberapay</h2>
     <div style="margin-left: 2rem"
       ><script src="https://liberapay.com/LiveBattl/widgets/button.js"></script>
