--- a/public/terms.html
+++ b/public/terms.html
@@ -17,6 +17,16 @@
     <title>Battl.live Terms</title>
   </head>
   <body>
-    <p></p>
+    <div id="headerwrap">
+      <div id="tab-container"
+        ><div id="tab">
+          <button class="tablink" onclick="document.location.href = '../'">Home</button>
+          <button class="tablink" onclick="document.location.href = '../rooms'">Rooms</button>
+          <button class="tablink" onclick="document.location.href = '../about'">About</button>
+        </div></div
+      >
+    </div>
+    <h1>Terms</h1>
+    terms
   </body>
 </html>
