--- a/public/about.html
+++ b/public/about.html
@@ -49,9 +49,10 @@
         take turns at the mic, and only one person is allowed to speak at a time. In others, both
         players have access to the mic at the same time.
       </p>
-      <div style="margin-left: 60%"
-        ><img src="../images/stream-prev.png" style="max-width: 100%" /></div
-    ></div>
+      <div style="margin-left: 60%; height: 200px; border: 1px solid #333"
+        >Image Placeholder [design in progress]</div
+      ></div
+    >
 
     <div class="section"
       ><div style="width: 10%; float: left; margin-left: 2em"
