--- a/public/home.html
+++ b/public/home.html
@@ -35,7 +35,10 @@
       >
     </div>
     <div id="container">
-      <div id = "container-close" onclick="container.remove()"><h6>X</h6></div>
+      <div id = "container-close" onclick="container.remove()"><h6 style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
+ unselectable="on"
+ onselectstart="return false;" 
+ onmousedown="return false;">X</h6></div>
       <div id="trending">
         <h1>Featured Rooms</h1>
         <div id="featured">
