--- a/public/rooms.html
+++ b/public/rooms.html
@@ -34,7 +34,7 @@
       >
     </div>
     <button id="new-room-button" onclick="document.location.href = '../newroom'"
-      >Create New Room (coming soon)</button
+      >Suggest New Room</button
     ><input type="text" id="room-search" placeholder="Search rooms" />
     <p id="room-search-info"></p>
     <ul id="roomlist"> </ul>
