--- a/public/terms.html
+++ b/public/terms.html
@@ -26,7 +26,7 @@
         </div></div
       >
     </div>
-    <h1>Terms</h1>
-    terms
+    <h1>Terms and Conditions</h1>
+    <h2>term</h2>
   </body>
 </html>
