--- a/public/about.html
+++ b/public/about.html
@@ -49,12 +49,12 @@
         take turns at the mic, and only one person is allowed to speak at a time. In others, both
         players have access to the mic at the same time.
       </p>
-      <div style="margin-left: 60%; height: 310px"
+      <div class="img-container" style="margin-left: 60%; height: 310px"
         ><img src="../images/stream-prev.png" style="max-width: 80%" /></div
     ></div>
 
     <div class="section"
-      ><div style="width: 10%; float: left; margin-left: 2em"
+      ><div class="img-container" style="width: 10%; float: left; margin-left: 2em"
         ><img src="../images/queue-prev.png" style="max-width: 100%"
       /></div>
       <p
