--- a/public/c-namespace.html
+++ b/public/c-namespace.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" type="text/css" href="/../css/c-namespace.css" />
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700|EB+Garamond" rel="stylesheet">
     <script data-ad-client="ca-pub-5525889174624554" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <link rel="shortcut icon" href="/../images/favicon.ico" />
     <title>Battl.live Room</title>
   </head>
   <body>
