--- a/public/not-found.html
+++ b/public/not-found.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/css?family=Oswald:400,300,700|EB+Garamond"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="/../images/favicon.ico" />
     <title>Battl.live 404</title>
   </head>
   <body>
