--- a/public/room-preview.html
+++ b/public/room-preview.html
@@ -17,6 +17,7 @@
     />
 
     <script src="/../javascripts/new-room/room-preview.js"></script>
+    <link rel="shortcut icon" href="/../images/favicon.ico" />
     <title>Battl.live Room</title>
   </head>
   <body>
