--- a/public/rooms.html
+++ b/public/rooms.html
@@ -17,6 +17,7 @@
     />
     <script src="../javascripts/rooms/get-elements.js"></script>
     <script src="../javascripts/rooms/get-rooms.js"></script>
+    <link rel="shortcut icon" href="/../images/favicon.ico" />
     <title>Battl.live Rooms</title>
   </head>
   <body>
