--- a/public/sponsor.html
+++ b/public/sponsor.html
@@ -19,6 +19,7 @@
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
     ></script>
+    <link rel="shortcut icon" href="/../images/favicon.ico" />
     <title>Battl.live Donate</title>
   </head>
   <body>
