--- a/public/home.html
+++ b/public/home.html
@@ -18,6 +18,7 @@
     <script src="../javascripts/home/get-elements.js"></script>
     <script src="../javascripts/home/get-featured-room.js"></script>
     <script data-ad-client="ca-pub-5525889174624554" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <link rel="shortcut icon" href="/../images/favicon.ico" />
     <title>Battl.live</title>
   </head>
   <body>
