--- a/public/new-room-fail.html
+++ b/public/new-room-fail.html
@@ -22,6 +22,7 @@
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
     ></script>
+    <link rel="shortcut icon" href="/../images/favicon.ico" />
     <title>Battl.live Create New Room</title>
   </head>
   <body>
