--- a/public/new-room.html
+++ b/public/new-room.html
@@ -18,6 +18,7 @@
     <script src="../javascripts/new-room/check-background-upload.js"></script>
     <script src="../javascripts/new-room/reload-preview.js"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <link rel="shortcut icon" href="/../images/favicon.ico" />
     <title>Battl.live Create New Room</title>
   </head>
   <body>
