--- a/public/report-bugs.html
+++ b/public/report-bugs.html
@@ -18,6 +18,7 @@
     <script src="../javascripts/home/get-elements.js"></script>
     <script src="../javascripts/home/get-featured-room.js"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <link rel="shortcut icon" href="/../images/favicon.ico" />
     <title>Battl.live Bugs & Suggestions</title>
   </head>
   <body>
