--- a/public/report-success.html
+++ b/public/report-success.html
@@ -17,6 +17,7 @@
     />
     <script src="../javascripts/home/get-elements.js"></script>
     <script src="../javascripts/home/get-featured-room.js"></script>
+    <link rel="shortcut icon" href="/../images/favicon.ico" />
     <title>Battl.live Bugs & Suggestions</title>
   </head>
   <body>
